--- a/demo-relations-entities/pom.xml
+++ b/demo-relations-entities/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ramssrez</groupId>
-	<artifactId>demo-entities</artifactId>
+	<artifactId>demo-relations-entities</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo-entities</name>
+	<name>demo-relations-entities</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
