--- a/demo-relations-entities/src/main/resources/application.properties
+++ b/demo-relations-entities/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# CONFIGURACIONES REQUERIDAS
+spring.datasource.url=jdbc:mysql://localhost:3306/facturacion?serverTimezone=America/Mexico_City
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-plaform=org.hibernate.dialect.MySQL8Dialect
+logging.level.org.hibernate.SQL=debug
 
+# CONFIGURACIONES ADICIONALES
+spring.jpa.hibernate.ddl-auto=create-drop
