--- a/demo-relations-entities/src/main/resources/application.properties
+++ b/demo-relations-entities/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # CONFIGURACIONES REQUERIDAS
-spring.datasource.url=jdbc:mysql://localhost:3306/facturacion?serverTimezone=America/Mexico_City
+spring.datasource.url=jdbc:mysql://localhost:3306/school_db?serverTimezone=America/Mexico_City
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
