conexion a la base de dato y limpieza

--- a/demo-relations-entities/src/main/resources/application.properties
+++ b/demo-relations-entities/src/main/resources/application.properties
@@ -1,5 +1,7 @@
+server.servlet.context-path=/ramssrez/api
+
 # CONFIGURACIONES REQUERIDAS
-spring.datasource.url=jdbc:mysql://localhost:3306/facturacion?serverTimezone=America/Mexico_City
+spring.datasource.url=jdbc:mysql://localhost:3306/compras_db?serverTimezone=America/Mexico_City
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -7,4 +9,4 @@ spring.jpa.database-plaform=org.hibernate.dialect.MySQL8Dialect
 logging.level.org.hibernate.SQL=debug
 
 # CONFIGURACIONES ADICIONALES
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
